syntax = "proto3";

package org.opensanctions.zahir.server.proto.v1;

option java_multiple_files = true;
option java_package = "org.opensanctions.zahir.server.proto.v1";
option py_generic_services =false;
// option java_outer_classname = "SessionProto";

message DatasetSpec {
  string name = 1;
  string version = 2;
}

message StatementMessage {
  string id = 1;
  string entity_id = 2;
  // string canonical_id = 3;
  string schema = 4;
  string property = 5;
  string value = 6;
  string lang = 7;
  string originalValue = 8;
  bool external = 9;
  int64 first_seen = 10;
  int64 last_seen = 11;
}

message Entity {
  string canonical_id = 1;
  string caption = 2;
  repeated StatementMessage statements = 3;
}